Better quote aesthetics, fixed top link on tablet

--- a/web/source/scss/global.scss
+++ b/web/source/scss/global.scss
@@ -88,7 +88,7 @@ main {
   }
   
   nav {
-    margin: 4.8rem 2.6rem;
+    margin: 0 2.6rem 4.8rem;
     display: flex;
     justify-content: center;
   }
